reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__epistemics__knowledge_context.rs_line_282_col_9.log

*** crates/tracewake-core/src/epistemics/knowledge_context.rs:282:9: replace ActorKnownWorkplaceFact::workplace_id -> &WorkplaceId with Box::leak(Box::new(Default::default()))

*** mutation diff:
--- crates/tracewake-core/src/epistemics/knowledge_context.rs
+++ replace ActorKnownWorkplaceFact::workplace_id -> &WorkplaceId with Box::leak(Box::new(Default::default()))
@@ -274,17 +274,17 @@
             believed_access_open,
             source_key: source_key.into(),
             source_event_ids,
             acquired_tick,
         }
     }
 
     pub fn workplace_id(&self) -> &WorkplaceId {
-        &self.workplace_id
+        Box::leak(Box::new(Default::default())) /* ~ changed by cargo-mutants ~ */
     }
 
     pub fn place_id(&self) -> &PlaceId {
         &self.place_id
     }
 
     pub fn believed_access_open(&self) -> bool {
         self.believed_access_open


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): the file `crates/tracewake-core/src/epistemics/knowledge_context.rs` has changed (1781908695.035924266s, 6s after last build at 1781908689.219924276s)
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
error[E0277]: the trait bound `WorkplaceId: Default` is not satisfied
   --> crates/tracewake-core/src/epistemics/knowledge_context.rs:282:28
    |
282 |         Box::leak(Box::new(Default::default())) /* ~ changed by cargo-mutants ~ */
    |                            ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `WorkplaceId`
   --> crates/tracewake-core/src/ids.rs:78:9
    |
 78 |         pub struct $name(StableId);
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
133 | stable_id_type!(WorkplaceId);
    | ---------------------------- in this macro invocation
    = note: this error originates in the macro `stable_id_type` (in Nightly builds, run with -Z macro-backtrace for more info)

For more information about this error, try `rustc --explain E0277`.
error: could not compile `tracewake-core` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `ids::WorkplaceId: Default` is not satisfied
   --> crates/tracewake-core/src/epistemics/knowledge_context.rs:282:28
    |
282 |         Box::leak(Box::new(Default::default())) /* ~ changed by cargo-mutants ~ */
    |                            ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `ids::WorkplaceId`
   --> crates/tracewake-core/src/ids.rs:78:9
    |
 78 |         pub struct $name(StableId);
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
133 | stable_id_type!(WorkplaceId);
    | ---------------------------- in this macro invocation
    = note: this error originates in the macro `stable_id_type` (in Nightly builds, run with -Z macro-backtrace for more info)

error: could not compile `tracewake-core` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
